--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,27 +36,33 @@
 body 
 {
     background-image: url(../fondo.png);
+    padding-top: 160px;
 }
 
+/* Trancision */
 html
 {
-    /* me permite deslizar cuando hago clic en los links del menu */
     scroll-behavior: smooth;
+}
+
+.pantallazo
+{
+    height: 100vh;
 }
 
 /* MENU */
 .header
 {
     top: 0;
-    left: 0;
     width: 100%;
-    z-index: 99;
     display: flex;
-    position: fixed;
-    max-width: 1540px;
-    padding: 30px 40px;
+    position: absolute;
+    max-width: 1500px;
+    height: 80px;
+    padding: 50px 0 0 70px;
     align-items: center;
     justify-content: space-between;
+    transition: top 0.5s;
 }
 
 header.abajo
@@ -64,9 +70,11 @@ header.abajo
     background: #161717;
 }
 
+/* TITULO */
 .titulo
 {
-    font-size: 36px;
+    padding-top: 50px;
+    font-size: 43px;
     color: #d8d8d8;
     margin-left: 15px;
     font-family: fuente;
@@ -74,6 +82,7 @@ header.abajo
     text-decoration: none;
 }
 
+/* LISTA */
 .nav-list
 {
     display: flex;
@@ -83,7 +92,7 @@ header.abajo
 .icon
 {
     margin-right: 5px;
-    font-size: 20px;
+    font-size: 23px;
 }
 
 .nav-enlace
@@ -94,6 +103,7 @@ header.abajo
     transition: .5s;
     font-weight: 600;
     text-align: none;
+    font-size: 18px;
     text-decoration: none;
     font-family: fuenteParrafo;
 }
@@ -115,19 +125,15 @@ header.abajo
 
 /* SECTION */
 .section
-{
-    width: 100%;
-    margin-top: 5%;
+{   
+    margin: 0 8% 0 8%;
 }
 
 .contenedor
 {
     color: #fff;
     display: flex;
-    margin-top: -40px;
-    padding: 30px 60px;
     align-items: center;
-    justify-content: space-between;
 }
 
 .Titulo
@@ -140,12 +146,11 @@ header.abajo
     font-family: fuenteParrafo; 
     border: 0.3px solid #B6D0F7;
     box-shadow: 1px 1px 6px #B6D0F7;
-    animation: animate__fadeIn; /* referring directly to the animation's @keyframe declaration */
+    animation: animate__fadeIn; 
 
-    background: #FC5419;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #FDAA09, #FC5419);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #FDAA09, #FC5419); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-      
+    background: #FC5419; 
+    background: -webkit-linear-gradient(to left, #FDAA09, #FC5419);
+    background: linear-gradient(to left, #FDAA09, #FC5419); 
 }
 
 .subTitulo
@@ -165,28 +170,25 @@ header.abajo
 
 .cont-img
 {  
-    margin-right: 10%;
-    animation: animate__fadeIn; /* referring directly to the animation's @keyframe declaration */
+    margin-left: 20%;
+    animation: animate__fadeIn;
 }
 
 .img
 {  
-    width: 125%;
+    width: 140%;
 }
 
 
 /* SECCION SOBRE MI */
 .sobremi
 {
-    color: #fff;
-    padding: 30px 60px;
-    background-color: #161717ac;
-}
-
-.contenido-seccion
-{
+    width: 90%;
     margin: auto;
-    max-width: 1540px;
+    color: #fff;
+    margin-bottom: 5%;
+    padding: 20px 50px;
+    background-color: #161717a1;
 }
 
 .contenido-seccion h2
@@ -274,7 +276,7 @@ header.abajo
 
 .interes:hover
 {
-    color: #252A2E;
+    color: #131414;
     background-color: #FDAA09;
 }
 
@@ -285,170 +287,669 @@ header.abajo
 }
 
 
-/* Seccion Habilidades */
+/* SECCION S K I L L S */
 .skills
 {
     color: #fff;
     padding: 50px 20px;
-    background-color: none;
 }
 
-.contenido-seccion
-{
+.skills .contenido-seccion{
+    max-width: 1400px;
     margin: auto;
-    max-width: 1540px;
 }
-
-.skills h2
-{
+.skills h2{
     font-size: 48px;
-    padding: 20px 0;
-    text-align: center;
-    margin-bottom: 20px;
     font-family: fuenteTitulo;
-}
+    text-align: center;
+    padding: 20px 0;
 
-.fila
-{
+}
+.skills .fila{
     display: flex;
 }
-
-.col 
-{
+.skills .fila .col{
     width: 50%;
     padding: 0 20px;
 }
-
-.col h3
-{
+.skills .fila .col h3{
     font-size: 28px;
-    margin-bottom: 25px;
     font-family: fuenteTitulo;
+    margin-bottom: 25px;
 }
-
-.skill > span
-{
+.skills .skill > span{
+    font-weight: bold;
     display: block;
-    font-weight: 600;
-    font-size: 18px;
     margin-bottom: 10px;
-    font-family: fuenteParrafo;
 }
-
-.skill .barra-skill
-{
-    width: 80%;
+.skills .skill .barra-skill{
     height: 8px;
+    width: 80%;
+    background-color: #131517;
     position: relative;
     margin-bottom: 30px;
-    background-color: #131517;
 }
-
-.skill .progreso
-{
+.skills .skill .progreso{
+    background-color: #FDAA09;
+    position: absolute;
     top: 0;
     left: 0;
     height: 8px;
-    position: absolute;
-    background-color: #d8d8d8;
 }
-
-.barra-skill span
-{
-    top: -17px;
-    width: 40px;
-    right: -15px;
+.skills .skill .barra-skill span{
+    position: absolute;
     height: 40px;
-    font-size: 14px;
-    font-weight: 700;
-    color: #252A2E;
-    line-height: 40px;
-    position: absolute;
-    text-align: center;
+    width: 40px;
+    background-color: #FDAA09;
+    color: #131517;
     border-radius: 50px;
-    font-family: fuenteParrafo;
-    background-color: #d8d8d8;
+    line-height: 40px;
+    text-align: center;
+    top: -17px;
+    right: -15px;
+    font-size: 14px;
 }
-
 /* Estas clases se agregaran dinamicamente mediante javascript */
-.javascript
-{
+.skills .skill .javascript{
     width: 0%;
     animation: 2s javascript forwards;
 }
-
-@keyframes javascript 
-{
+@keyframes javascript {
     0%{width: 0%;}
-    100%{width: 15%;}
+    100%{width: 25%;}
 }
 
-.htmlcss
-{
+.skills .skill .htmlcss{
     width: 0%;
     animation: 2s htmlcss forwards;
 }
-
-@keyframes htmlcss 
-{
-    0%{width: 0%;}
-    100%{width: 85%;}
-}
-
-.java
-{
-    width: 0%;
-    animation: 2s htmlcss forwards;
-}
-
-@keyframes htmlcss 
-{
+@keyframes htmlcss {
     0%{width: 0%;}
     100%{width: 90%;}
 }
 
-.skill .comunicacion
-{
+.skills .skill .java{
+    width: 0%;
+    animation: 2s java forwards;
+}
+@keyframes java {
+    0%{width: 0%;}
+    100%{width: 70%;}
+}
+
+.skills .skill .mysql{
+    width: 0%;
+    animation: 2s mysql forwards;
+}
+@keyframes mysql {
+    0%{width: 0%;}
+    100%{width: 90%;}
+}
+
+.skills .skill .comunicacion{
     width: 0%;
     animation: 2s comunicacion forwards;
 }
-
-@keyframes comunicacion 
-{
+@keyframes comunicacion {
     0%{width: 0%;}
     100%{width: 80%;}
 }
 
-.skill .trabajo
-{
+.skills .skill .trabajo{
     width: 0%;
     animation: 2s trabajo forwards;
 }
-
-@keyframes trabajo 
-{
+@keyframes trabajo {
     0%{width: 0%;}
-    100%{width: 90%;}
+    100%{width: 85%;}
 }
 
-.skill .creatividad{
+.skills .skill .creatividad{
     width: 0%;
     animation: 2s creatividad forwards;
 }
-@keyframes creatividad 
-{
+@keyframes creatividad {
     0%{width: 0%;}
-    100%{width: 99%;}
+    100%{width: 85%;}
 }
 
-.skill .dedicacion
-{
+.skills .skill .dedicacion{
     width: 0%;
     animation: 2s dedicacion forwards;
 }
-
-@keyframes dedicacion 
-{
+@keyframes dedicacion {
     0%{width: 0%;}
-    100%{width: 90%;}
+    100%{width: 70%;}
+}
+
+
+/* SECCION PORTFOLIO */
+.portfolio{
+    background-color: #161717a1;
+    color: #fff;
+    padding: 50px 20px;
+    margin-top: 5%;
+}
+.portfolio .contenido-seccion{
+    max-width: 1100px;
+    margin: auto;
+}
+.portfolio h2{
+    font-size: 48px;
+    font-family: fuenteTitulo;
+    text-align: center;
+    padding: 20px 0;
+}
+.portfolio .galeria{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.portfolio .galeria .proyecto{
+    position: relative;
+    max-width: 340px;
+    height: fit-content;
+    margin: 10px;
+    cursor: pointer;
+}
+.portfolio .galeria .proyecto img{
+    width: 100%;
+    display: block;
+}
+.portfolio .galeria .proyecto .overlay{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background: linear-gradient(rgb(252, 84, 25, .8), rgb(253, 170, 9, .8));
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: 1s;
+    font-size: 18px;
+    letter-spacing: 3px;
+    opacity: 0;
+}
+.portfolio .galeria .proyecto .overlay h3{
+    margin-bottom: 20px;
+    transition: 1s;
+}
+.portfolio .galeria .proyecto .overlay:hover{
+    opacity: 1;
+}
+.portfolio .galeria .proyecto .overlay:hover h3{
+    margin-bottom: 0px;
+}
+/* SECCION CONTACTO */
+.contacto{    
+    color: #fff;
+    padding: 50px 0;
+    margin-top: 5%;
+    background-color: #000000d5;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #000000d5, #434343a8);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #000000d5, #2b2b2ba8), url(./../telefono.png); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: cover;
+    background-attachment: fixed;
+}
+.contacto .contenido-seccion{
+    max-width: 1400px;
+    margin: auto;
+}
+.contacto h2{
+    font-size: 48px;
+    font-family: fuenteTitulo;
+    text-align: center;
+    padding: 20px 0;
+}
+.contacto .fila{
+    display: flex;
+}
+.contacto .col{
+    width: 50%;
+    margin: auto;
+    padding: 10px;
+    position: relative;
+}
+.contacto .col input, .contacto .col textarea{
+    display: block;
+    width: 100%;
+    padding: 18px;
+    border: none;
+    margin-bottom: 20px;
+    background-color: transparent;
+    border-bottom: 2px solid #fff;
+    border-radius: 3px;
+    color: #fff;
+    font-size: 18px;
+}
+
+.contacto .col textarea{
+    height: 80px;
+    width: 100%;
+    padding: 0 18px;
+}
+
+.contacto button{
+    cursor: pointer;
+    background-color: transparent;
+    border: 2px solid #fff;
+    width: fit-content;
+    display: block;
+    margin: 20px auto;
+    padding: 10px 22px;
+    font-size: 16px;
+    color: #fff;
+    position: relative;
+    z-index: 10;
+}
+.contacto button .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: #FDAA09;
+    z-index: -1;
+    transition: 1s;
+}
+.contacto button:hover .overlay{
+    width: 100%;
+}
+.contacto .col img{
+    width: 100%;
+}
+.contacto .col .info{
+    position: absolute;
+    top: 40%;
+    background-color: #252A2E;
+    padding: 20px;
+    max-width: 350px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.contacto .col .info ul{
+    list-style: none;
+}
+.contacto .col .info ul li{
+    margin-bottom: 20px;
+}
+.contacto .col .info ul li i{
+    color: #FDAA09;
+    display: inline-block;
+    margin-right: 20px;
+}
+
+footer{
+    background-color: #161717;
+    color: #fff;
+    padding: 50px 0 30px 0;
+    text-align: center;
+    position: relative;
+    width: 100%;
+    height: 150px;
+}
+
+footer .redes{
+    margin-bottom: 25px;
+}
+
+footer .redes a{
+    color: #fff;
+    display: inline-block;
+    text-decoration: none;
+    border: 1px solid #fff;
+    border-radius: 100%;
+    width: 42px;
+    height: 42px;
+    line-height: 42px;
+    font-size: 25px;
+    transition: .3s;
+}
+
+footer .copyright
+{
+    font-family: fuenteParrafo;
+    font-size: 18px;
+}
+
+footer .arriba{
+    display: block;
+    width: 50px;
+    height: 50px;
+    background-color: #FDAA09;
+    color: #fff;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -25px;
+    border-radius: 50%;
+    line-height: 50px;
+    font-size: 25px;
+}
+
+
+/* RESPONSIVE */
+@media screen and (min-width:1920px)
+{
+        /* PAGINA */
+        body
+        {
+            padding-top: 100px;
+        }
+
+        /* MENU */
+        .header
+        {
+            max-width: 1800px;
+            height: 80px;
+            padding: 100px 0 0 70px;
+            margin-bottom: 0;
+        }
+
+        /* TITULO */
+        .titulo
+        {
+            font-size: 60px;
+            margin-left: 50px;
+            margin-right: 130px;
+        }
+
+        /* LISTA */
+        .icon
+        {
+            margin-right: 8px;
+            font-size: 30px;
+        }
+
+        .nav-enlace
+        {
+            font-size: 25px;
+        }
+
+        /* SECTION */
+        .section
+        {  
+            padding-top: 10px;
+            margin-bottom: 0;
+        }
+
+        .Titulo
+        {  
+            width: 85%;
+            font-size: 35px; 
+            padding: 15px 15px;
+            margin-bottom: 60px;
+        }
+
+        .subTitulo
+        {  
+            font-size: 60px; 
+            margin-bottom: 30px;
+            letter-spacing: 5px;
+        }
+
+        .parrafo
+        {  
+            font-size: 30px; 
+            font-weight: 400;
+        }
+
+        .img
+        {  
+            width: 176%;
+        }
+
+
+        /* SECCION SOBRE MI */
+        .contenido-seccion
+        {
+            padding: 0 70px;
+            margin-bottom: 0;
+        }
+
+        .contenido-seccion h2
+        {
+            font-size: 54px;
+        }
+
+        .contenido-seccion p
+        {
+            font-size: 22px;
+        }
+
+        .contenido-seccion p span
+        {
+            font-size: 22px;
+        }
+
+        .col
+        {
+            width: 100%;
+        }
+
+        .col h3
+        {
+            font-size: 30px;
+        }
+
+        .col ul
+        {
+            list-style: none;
+        }
+
+        .col ul li
+        {
+            font-size: 22px;
+        }
+        
+        .interes
+        {
+            width: 130px;
+            height: 110px;
+            font-size: 22px;
+        }
+
+        .interes i
+        {
+            font-size: 40px;
+            margin-bottom: 15px;
+        }
+
+
+        /* SECCION S K I L L S */
+        .skills .contenido-seccion
+        {
+            max-width: 1800px;
+        }
+
+        .skills h2
+        {
+            font-size: 52px;
+            margin-bottom: 30px;
+        } 
+        
+        .skills .fila .col
+        {
+            width: 60%;
+        }
+
+        .skills .fila .col h3
+        {
+            font-size: 32px;
+        }
+
+        .skills .skill > span
+        {
+            font-size: 22px;
+            font-family: fuenteParrafo;
+            margin-bottom: 20px;
+        }
+
+        /* SECCION PORTAFOLIO */
+        .portfolio
+        {
+            padding: 50px 70px;
+            margin: auto;
+            margin-top: 30px;
+            width: 90%;
+        }
+
+        .portfolio h2
+        {
+            font-size: 52px;
+            padding: 10px 0 25px 0;
+        }
+
+        .portfolio .galeria .proyecto
+        {
+            position: relative;
+            max-width: 340px;
+        }
+
+        .portfolio .galeria .proyecto img
+        {
+            width: 100%;
+            display: block;
+        }
+
+        .portfolio .galeria .proyecto .overlay
+        {
+            font-size: 212px;
+            letter-spacing: 4px;
+        }
+        
+        /* SECCION CONTACTO */
+        .contacto .contenido-seccion
+        {
+            max-width: 1800px;
+        }
+
+        .contacto h2
+        {
+            font-size: 52px;
+        }
+        
+        .contacto .col input, .contacto .col textarea
+        {
+            font-size: 22px;
+        }
+
+        .contacto button
+        {
+            font-size: 18px;
+        }
+
+        footer .redes a
+        {
+            font-size: 40px;
+        }
+
+        footer .arriba
+        {
+            font-size: 22px;
+        }
+}
+
+@media screen and (max-width:980px)
+{
+    nav
+    {
+        display: none;
+    }
+
+    .nav-responsive
+    {
+        display: block;
+    }
+    
+    nav.responsive
+    {
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 75px;
+        background-color: #252A2E;
+        width: 180px;
+    }
+
+    nav.responsive ul
+    {
+        display: block !important;
+    }
+
+    nav.responsive ul li
+    {
+        border-bottom: 1px solid #fff;
+        padding: 10px 0;
+    }
+}
+
+@media screen and (max-width:700px)
+{
+    .sobremi .fila
+    {
+        display: block;
+    }
+
+    .sobremi .fila .col
+    {
+        width: fit-content;
+    }
+
+    .skills .fila
+    {
+        display: block;
+    }
+
+    .skills .fila .col
+    {
+        width: 100%;
+    } 
+
+    .skills .fila .col .barra-skill
+    {
+        width: 100%;
+    }
+
+    .curriculum .fila
+    {
+        display: block;
+    }
+
+    .curriculum .fila .col
+    {
+        width: 90%;
+    }
+
+    .curriculum .fila .derecha
+    {
+        margin-left: 20px;
+    }
+
+    .portfolio .galeria
+    {
+        display: block;
+        width: 100%;
+    }
+
+    .portfolio .galeria .proyecto
+    {
+        max-width: 100%;
+    }
+
+    .portfolio .galeria .proyecto img
+    {
+        width: 100%;
+    }
+
+    .contacto .fila
+    {
+        display: block;
+    }
+
+    .contacto .fila .col
+    {
+        width: 100%;
+    }
 }
