--- a/views/template/header.ejs
+++ b/views/template/header.ejs
@@ -9,7 +9,7 @@
     <title> Portafolio Laura Romero </title>
 
     <!-- ICONO -->
-    <link rel="icon" type="image/png" href="./../static/iconooo.png">
+    <link rel="icon" type="image/png" href="./../static/icono.png">
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="./../static/css/style.css">
@@ -27,28 +27,29 @@
 
 <body>
     
-    <!-- Header -->
-    <header class="header">
+    <div class="pantallazo">
+        
+        <!-- Header -->
+        <header class="header">
 
-        <!-- Logo -->
-        <div class="logo">
-            <a href="#" class="titulo"> <i class="icon-planet"></i> LAURA </a>
-        </div>
+            <!-- Logo -->
+            <div class="logo">
+                <a href="#" class="titulo"> <i class="icon-planet"></i> LAURA </a>
+            </div>
 
-        <!-- Menu -->
-        <nav id="nav">
-            <ul class="nav-list">
-                <li class="nav-item"> <a href="#inicio" class="nav-enlace" onclick="seleccionar()"> <i class="icon-home icon"></i> INICIO </a> </li>
-                <li class="nav-item"> <a href="#sobremi" class="nav-enlace" onclick="seleccionar()"> <i class="icon-heart1 icon"></i> SOBRE MÍ </a> </li>
-                <li class="nav-item"> <a href="#habilidades" class="nav-enlace" onclick="seleccionar()"> <i class="icon-plugin icon"></i> HABILIDADES </a> </li>
-                <li class="nav-item"> <a href="#educacion" class="nav-enlace" onclick="seleccionar()"> <i class="icon-graduado icon"></i> EDUCACIÓN </a> </li>
-                <li class="nav-item"> <a href="#portafolio" class="nav-enlace" onclick="seleccionar()"> <i class="icon-suitcase1 icon"></i> PORTAFOLIO </a> </li>
-                <li class="nav-item"> <a href="#contacto" class="nav-enlace" onclick="seleccionar()"> <i class="icon-phone icon"></i> CONTACTO </a> </li>
-            </ul>
-        </nav>
+            <!-- Menu -->
+            <nav id="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"> <a href="#inicio" class="nav-enlace" onclick="seleccionar()"> <i class="icon-home icon"></i> INICIO </a> </li>
+                    <li class="nav-item"> <a href="#sobremi" class="nav-enlace" onclick="seleccionar()"> <i class="icon-heart1 icon"></i> SOBRE MÍ </a> </li>
+                    <li class="nav-item"> <a href="#skills" class="nav-enlace" onclick="seleccionar()"> <i class="icon-plugin icon"></i> HABILIDADES </a> </li>
+                    <li class="nav-item"> <a href="#portfolio" class="nav-enlace" onclick="seleccionar()"> <i class="icon-suitcase1 icon"></i> PORTAFOLIO </a> </li>
+                    <li class="nav-item"> <a href="#contacto" class="nav-enlace" onclick="seleccionar()"> <i class="icon-phone icon"></i> CONTACTO </a> </li>
+                </ul>
+            </nav>
 
-        <!-- Icono Responsive-->
-        <div class="nav-responsive" onclick="mostrarOcultarMenu()">
-            <i class="icon-menu"></i>
-        </div>
-    </header>
+            <!-- Icono Responsive-->
+            <div class="nav-responsive" onclick="mostrarOcultarMenu()">
+                <i class="icon-menu"></i>
+            </div>
+        </header>
