--- a/views/educacion.ejs
+++ b/views/educacion.ejs
@@ -1,6 +1,19 @@
 <%- include('template/header'); %>
 
-    <h1> Esta es educación </h1>
+    <!-- Section -->
+    <section class="section">
+        <div class="contenedor">
+            <div class="cont-text">
+                <h1 class="animate__zoomIn Titulo"> Bienvenidos a mi portafolio </h1>
+                <h2 class="subTitulo"> A continuación les mostrare... </h2>
+                <h3 class="parrafo"> Toda mi vida acádemica </h3>
+            </div>
+            <div class="cont-img">
+                <img src="./../static/animacion.png" class="animate__animated animate__bounceIn img" alt="astronauta">
+            </div>
+        </div>
+    </section>
+</div>
 
 <%- include('template/footer'); %>
 
