--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <%- include('template/header'); %> 
 
+    <div class="pantallazo">
+            
         <!-- Section -->
         <section class="section">
             <div class="contenedor">
