--- a/views/template/header.ejs
+++ b/views/template/header.ejs
@@ -13,6 +13,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="./../static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./../static/css/style-educacion.css">
     
     <!-- JAVASCRIPT -->
     <script src="./../static/js/main.js"></script>
@@ -26,22 +27,21 @@
 </head>
 
 <body>
-    
-    <div class="pantallazo">
         
         <!-- Header -->
         <header class="header">
 
             <!-- Logo -->
             <div class="logo">
-                <a href="#" class="titulo"> <i class="icon-planet"></i> LAURA </a>
+                <a href="/" class="titulo"> <i class="icon-planet icono"></i> LAURA </a>
             </div>
 
             <!-- Menu -->
             <nav id="nav">
                 <ul class="nav-list">
-                    <li class="nav-item"> <a href="#inicio" class="nav-enlace" onclick="seleccionar()"> <i class="icon-home icon"></i> INICIO </a> </li>
+                    <li class="nav-item"> <a href="/" class="nav-enlace" onclick="seleccionar()"> <i class="icon-home icon"></i> INICIO </a> </li>
                     <li class="nav-item"> <a href="#sobremi" class="nav-enlace" onclick="seleccionar()"> <i class="icon-heart1 icon"></i> SOBRE MÍ </a> </li>
+                    <li class="nav-item"> <a href="/educacion" class="nav-enlace" onclick="seleccionar()"> <i class="icon-graduado icon"></i> EDUCACIÓN </a> </li>
                     <li class="nav-item"> <a href="#skills" class="nav-enlace" onclick="seleccionar()"> <i class="icon-plugin icon"></i> HABILIDADES </a> </li>
                     <li class="nav-item"> <a href="#portfolio" class="nav-enlace" onclick="seleccionar()"> <i class="icon-suitcase1 icon"></i> PORTAFOLIO </a> </li>
                     <li class="nav-item"> <a href="#contacto" class="nav-enlace" onclick="seleccionar()"> <i class="icon-phone icon"></i> CONTACTO </a> </li>
