--- a/views/educacion.ejs
+++ b/views/educacion.ejs
@@ -10,7 +10,7 @@
                     <h3 class="parrafo"> Toda mi vida acádemica </h3>
                 </div>
                 <div class="cont-image">
-                    <img src="./../static/educacioon.png" class="animate__animated animate__bounceIn img" alt="astronauta">
+                    <img src="./../static/educacion.png" class="animate__animated animate__bounceIn img" alt="astronauta">
                 </div>
             </div>
         </section>
@@ -21,54 +21,69 @@
         <div class="contenido-seccion">
             <h2> Primaria </h2>
             <p> <span> Hola, soy Laura Romero, </span> te cuento que yo estudie 9 años en el mismo colegio, 
-                aunque luego de 6 años cambio de conseción, y el colegio ya no era el mismo.
+                un colegio que me gusto muchisimo y me lo disfrute
             </p>
 
             <div class="fila">
 
                 <!-- Datos Personales -->
                 <div class="col">
-                    <img src="./../static/colegio1.jpg">
+                    <img class="colegio1" src="./../static/colegio1.jpg">
                 </div>
 
-                <!-- Intereses -->
+                <!-- Informacion -->
+                <div class="col-info">
+                    <h3> Informacion </h3>
+                    <ul>
+                        <li>
+                            <span> Nombre </span>
+                            Colsubsidio San Vicente
+                        </li>
+                        <li>
+                            <span> Tiempo </span>
+                            2010-2019
+                        </li>
+                        <li>
+                            <span> Descripcion </span>
+                                Era un colegio muy bueno, luego de un tiempo cambio de conseción y
+                                se volvio muy malo, la forma de enseñeñar cambio, los uniformes, todo cambio :(
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="skills" id="skills">
+        <div class="contenido-seccion">
+            <h2> Secundaria </h2>
+            <p> Luego de haber cursado 9, me cambie para este colegio, que ofrecia una gran oportunidad de estudio, que es el sena
+            </p>
+
+            <div class="fila">
+
+                <!-- Datos Personales -->
                 <div class="col">
-                    <h3> Intereses </h3>
-                    <div class="contenedor-intereses">
-                        <div class="interes">
-                            <i class="icon-headphone"></i>
-                            <span> MUSICA </span>
-                        </div>
-                        <div class="interes">
-                            <i class="icon-aircraft"></i>
-                            <span> VIAJAR </span>
-                        </div>
-                        
-                        <div class="interes">
-                            <i class="icon-bird"></i>
-                            <span> ANIMALES </span>
-                        </div>
-                        <div class="interes">
-                            <i class="icon-soccer"></i>
-                            <span> DEPORTE </span>
-                        </div>
-                        <div class="interes">
-                            <i class="icon-bookmark"></i>
-                            <span> LIBROS </span>
-                        </div>
-                        <div class="interes">
-                            <i class="icon-car"></i>
-                            <span> CARROS </span>
-                        </div>
-                        <div class="interes">
-                            <i class="icon-bike"></i>
-                            <span> MOTOS </span>
-                        </div>
-                        <div class="interes">
-                            <i class="icon-camera"></i>
-                            <span> FOTOS </span>
-                        </div>
-                    </div>
+                    <img class="colegio1" src="./../static/colegio1.jpg">
+                </div>
+
+                <!-- Informacion -->
+                <div class="col-info">
+                    <h3> Informacion </h3>
+                    <ul>
+                        <li>
+                            <span> Nombre </span>
+                            Aldemar Rojas Plazas
+                        </li>
+                        <li>
+                            <span> Tiempo </span>
+                            2020-2021
+                        </li>
+                        <li>
+                            <span> Descripcion </span>
+                                Era un colegio muy bueno, aunque esos años estuvo lo del covid, igualmente me difrute mucho esta etapa :)
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
