--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -29,13 +29,14 @@
     
     <!-- footer -->
     <footer>
-        <a href="#inicio" class="arriba">
+        <a href="#" class="arriba">
             <i class="icon-chevron-up"></i>
         </a>
         <div class="redes">
-            <a href="#"><i class="icon-facebook"></i></a>
-            <a href="#"><i class="icon-instagram"></i></a>
-            <a href="#"><i class="icon-whatsapp"></i></a>
+            <a href=""><span class="icon-facebook"></span></a>
+            <a href=""><span class="icon-instagram"></span></a>
+            <a href=""><span class="icon-whatsapp"></span></a>
+            <a href=""><span class="icon-github"></span></a>
         </div>
         <p class="copyright"> <i> Laura Romero © 2022 </i> </p>
 
