--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,7 +36,7 @@
 body 
 {
     background-image: url(../fondo.png);
-    padding-top: 160px;
+    padding-top: 150px;
 }
 
 /* Trancision */
@@ -54,7 +54,7 @@ html
     position: absolute;
     max-width: 1500px;
     height: 80px;
-    padding: 50px 0 0 70px;
+    padding: 40px 30px 0 30px;
     align-items: center;
     justify-content: space-between;
     transition: top 0.5s;
@@ -77,6 +77,7 @@ header.abajo
     -webkit-text-fill-color: transparent;
 }
 
+/*
 .titulo:hover
 {
     background: #FC5419; 
@@ -86,14 +87,14 @@ header.abajo
 
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-}
+}*/
 
 .titulo
 {
-    padding-top: 50px;
     font-size: 43px;
     color: #d8d8d8;
     margin-left: 15px;
+    padding-top: 50px;
     font-family: fuente;
     margin-right: 150px;
     text-decoration: none;
@@ -108,8 +109,8 @@ header.abajo
 
 .icon
 {
-    margin-right: 5px;
     font-size: 23px;
+    margin-right: 5px;
 }
 
 .nav-enlace
@@ -117,10 +118,10 @@ header.abajo
     padding: 3px;
     color: #fff;
     margin: 0 15px;
+    font-size: 18px;
     transition: .5s;
     font-weight: 600;
     text-align: none;
-    font-size: 18px;
     text-decoration: none;
     font-family: fuenteParrafo;
 }
@@ -165,14 +166,14 @@ header.abajo
     font-size: 23px; 
     padding: 13px 15px;
     margin-bottom: 50px;
-    font-family: fuenteParrafo; 
+    font-family: fuenteParrafo;
+    animation: animate__fadeIn;  
     border: 0.3px solid #B6D0F7;
     box-shadow: 1px 1px 6px #B6D0F7;
-    animation: animate__fadeIn; 
 
     background: #FC5419; 
-    background: -webkit-linear-gradient(to left, #FDAA09, #FC5419);
     background: linear-gradient(to left, #FDAA09, #FC5419); 
+    background: -webkit-linear-gradient(to left, #FDAA09, #FC5419);
 }
 
 .subTitulo
@@ -208,7 +209,7 @@ header.abajo
     width: 90%;
     margin: auto;
     color: #fff;
-    margin-bottom: 5%;
+    margin-top: 3%;
     padding: 20px 50px;
     background-color: #161717a1;
 }
@@ -270,9 +271,9 @@ header.abajo
 
 .col ul li span
 {
-    margin-right: 15px;
     color: #ffffff;
     font-weight: bold;
+    margin-right: 15px;
 }
 
 .contenedor-intereses
@@ -292,13 +293,14 @@ header.abajo
     margin: 0 15px 15px 0;
     flex-direction: column;
     justify-content: center;
-    background-color: #252A2E;
     font-family: fuenteParrafo;
+    background-color: #252A2E;
 }
 
 .interes:hover
 {
     color: #131414;
+    font-weight: bold;
     background-color: #FDAA09;
 }
 
@@ -313,341 +315,614 @@ header.abajo
 .skills
 {
     color: #fff;
+    margin-top: 3%;
     padding: 50px 20px;
 }
 
-.skills .contenido-seccion{
-    max-width: 1400px;
+.skills .contenido-seccion
+{
     margin: auto;
+    max-width: 1400px;
 }
-.skills h2{
-    font-size: 48px;
-    font-family: fuenteTitulo;
-    text-align: center;
-    padding: 20px 0;
 
+.skills h2
+{
+    font-size: 48px;
+    padding: 20px 0;
+    text-align: center;
+    font-family: fuenteTitulo;
 }
-.skills .fila{
+
+.skills .fila
+{
     display: flex;
 }
-.skills .fila .col{
+
+.skills .fila .col
+{
     width: 50%;
+    margin-top: 2%;
     padding: 0 20px;
 }
-.skills .fila .col h3{
-    font-size: 28px;
-    font-family: fuenteTitulo;
-    margin-bottom: 25px;
+
+.skills .fila .col h3
+{
+    font-size: 32px;
+    margin-left: 30px;
+    margin-bottom: 40px;
+    font-family: fuenteTitulo;    background: #09fde9; 
+    background: -webkit-linear-gradient(to left, #fd09ed, #09fde9);
+    background: linear-gradient(to left, #fd09ed, #09fde9); 
+    background: linear-gradient(#09fde9, #fd09ed);
+
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
-.skills .skill > span{
-    font-weight: bold;
+
+.skills .skill > span
+{
+    margin-top: 2%;
     display: block;
+    font-weight: bold;
     margin-bottom: 10px;
+    font-family: fuenteParrafo;
 }
-.skills .skill .barra-skill{
-    height: 8px;
+
+.skills .skill .barra-skill
+{
     width: 80%;
-    background-color: #131517;
+    height: 8px;
+    margin-top: 3%;
+    font-weight: bold;
     position: relative;
     margin-bottom: 30px;
+    font-family: fuenteParrafo;
+    background-color: #131517;
 }
-.skills .skill .progreso{
-    background-color: #FDAA09;
-    position: absolute;
+
+.skills .skill .progreso
+{
     top: 0;
     left: 0;
     height: 8px;
-}
-.skills .skill .barra-skill span{
     position: absolute;
-    height: 40px;
-    width: 40px;
-    background-color: #FDAA09;
-    color: #131517;
-    border-radius: 50px;
-    line-height: 40px;
-    text-align: center;
+}
+
+.skills .skill .barra-skill span
+{
     top: -17px;
+    width: 40px;
+    height: 40px;
     right: -15px;
     font-size: 14px;
+    color: #131517;
+    line-height: 40px;
+    text-align: center;
+    position: absolute;
+    border-radius: 50px;
 }
+
+.skills .skill .js
+{
+    background-color: #FDAA09;
+}
+.skills .skill .js-
+{
+    text-shadow: 2px 2px 3px #FDAA09;
+}
+.skills .skill .barra-skill .js_
+{
+    background-color: #FDAA09;
+}
+
+.skills .skill .html
+{
+    background-color: #fd3a09;
+}
+.skills .skill .html-
+{
+    text-shadow: 2px 2px 3px #fd3a09;
+}
+.skills .skill .barra-skill .html_
+{
+    background-color: #fd3a09;
+}
+
+.skills .skill .css
+{
+    background-color: #095afd;
+}
+.skills .skill .css-
+{
+    text-shadow: 2px 2px 3px #095afd;
+}
+.skills .skill .barra-skill .css_
+{
+    background-color: #095afd;
+}
+
+.skills .skill .java
+{
+    background-color: #09fd09;
+}
+.skills .skill .java-
+{
+    text-shadow: 2px 2px 3px #09fd09;
+}
+.skills .skill .barra-skill .java_
+{
+    background-color: #09fd09;
+}
+
+.skills .skill .mysql
+{
+    background-color: #fd09ed;
+}
+.skills .skill .mysql-
+{
+    text-shadow: 2px 2px 3px #fd09ed;
+}
+.skills .skill .barra-skill .mysql_
+{
+    background-color: #fd09ed;
+}
+
+.skills .skill .com
+{
+    background-color: #09fde9;
+}
+.skills .skill .com-
+{
+    text-shadow: 2px 2px 3px #09fde9;
+}
+.skills .skill .barra-skill .com_
+{
+    background-color: #09fde9;
+}
+
+.skills .skill .trab
+{
+    background-color: #a84ff6;
+}
+.skills .skill .trab-
+{
+    text-shadow: 2px 2px 3px #a84ff6;
+}
+.skills .skill .barra-skill .trab_
+{
+    background-color: #a84ff6;
+}
+
+.skills .skill .crea
+{
+    background-color: #f6d74f;
+}
+.skills .skill .crea-
+{
+    text-shadow: 2px 2px 3px #f6d74f;
+}
+.skills .skill .barra-skill .crea_
+{
+    background-color: #f6d74f;
+}
+
+.skills .skill .ded
+{
+    background-color: #f64f73;
+}
+.skills .skill .ded-
+{
+    text-shadow: 2px 2px 3px #f64f73;
+}
+.skills .skill .barra-skill .ded_
+{
+    background-color: #f64f73;
+}
+
 /* Estas clases se agregaran dinamicamente mediante javascript */
-.skills .skill .javascript{
+.skills .skill .javascript
+{
     width: 0%;
     animation: 2s javascript forwards;
 }
-@keyframes javascript {
+
+@keyframes javascript 
+{
     0%{width: 0%;}
     100%{width: 25%;}
 }
 
-.skills .skill .htmlcss{
+.skills .skill .html
+{
     width: 0%;
-    animation: 2s htmlcss forwards;
-}
-@keyframes htmlcss {
-    0%{width: 0%;}
-    100%{width: 90%;}
+    animation: 2s html forwards;
 }
 
-.skills .skill .java{
+@keyframes html 
+{
+    0%{width: 0%;}
+    100%{width: 85%;}
+}
+
+.skills .skill .css
+{
+    width: 0%;
+    animation: 2s css forwards;
+}
+
+@keyframes css 
+{
+    0%{width: 0%;}
+    100%{width: 85%;}
+}
+
+
+.skills .skill .java
+{
     width: 0%;
     animation: 2s java forwards;
 }
-@keyframes java {
+
+@keyframes java 
+{
     0%{width: 0%;}
     100%{width: 70%;}
 }
 
-.skills .skill .mysql{
+.skills .skill .mysql
+{
     width: 0%;
     animation: 2s mysql forwards;
 }
-@keyframes mysql {
+
+@keyframes mysql 
+{
     0%{width: 0%;}
     100%{width: 90%;}
 }
 
-.skills .skill .comunicacion{
+.skills .skill .comunicacion
+{
     width: 0%;
     animation: 2s comunicacion forwards;
 }
-@keyframes comunicacion {
+
+@keyframes comunicacion 
+{
     0%{width: 0%;}
     100%{width: 80%;}
 }
 
-.skills .skill .trabajo{
+.skills .skill .trabajo
+{
     width: 0%;
     animation: 2s trabajo forwards;
 }
-@keyframes trabajo {
+
+@keyframes trabajo 
+{
     0%{width: 0%;}
     100%{width: 85%;}
 }
 
-.skills .skill .creatividad{
+.skills .skill .creatividad
+{
     width: 0%;
     animation: 2s creatividad forwards;
 }
-@keyframes creatividad {
+
+@keyframes creatividad 
+{
     0%{width: 0%;}
     100%{width: 85%;}
 }
 
-.skills .skill .dedicacion{
+.skills .skill .dedicacion
+{
     width: 0%;
     animation: 2s dedicacion forwards;
 }
-@keyframes dedicacion {
+
+@keyframes dedicacion 
+{
     0%{width: 0%;}
     100%{width: 70%;}
 }
 
 
 /* SECCION PORTFOLIO */
-.portfolio{
-    background-color: #161717a1;
+.portfolio
+{
     color: #fff;
-    padding: 50px 20px;
     margin-top: 5%;
+    padding: 50px 20px;
+    background-color: #161717a1;
 }
-.portfolio .contenido-seccion{
-    max-width: 1100px;
+
+.portfolio .contenido-seccion
+{
     margin: auto;
+    max-width: 1200px;
 }
-.portfolio h2{
+
+.portfolio h2
+{
     font-size: 48px;
-    font-family: fuenteTitulo;
-    text-align: center;
     padding: 20px 0;
+    text-align: center;
+    font-family: fuenteTitulo;
 }
-.portfolio .galeria{
+
+.portfolio .galeria
+{
     display: flex;
+    margin-top: 2%;
     flex-wrap: wrap;
     justify-content: space-around;
 }
-.portfolio .galeria .proyecto{
-    position: relative;
-    max-width: 340px;
-    height: fit-content;
+
+.portfolio .galeria .proyecto
+{
     margin: 10px;
     cursor: pointer;
+    max-width: 340px;
+    position: relative;
+    height: fit-content;
 }
-.portfolio .galeria .proyecto img{
+
+.portfolio .galeria .proyecto img
+{
     width: 100%;
+    height: 230px;
     display: block;
 }
-.portfolio .galeria .proyecto .overlay{
-    position: absolute;
+
+.portfolio .galeria .proyecto .overlay
+{
     top: 0;
+    opacity: 0;
     width: 100%;
     height: 100%;
-    text-align: center;
-    background: linear-gradient(rgb(252, 84, 25, .8), rgb(253, 170, 9, .8));
     display: flex;
+    transition: 1s;
+    font-size: 18px;
+    text-align: center;
+    position: absolute;
+    letter-spacing: 3px;
     flex-direction: column;
     justify-content: center;
-    transition: 1s;
-    font-size: 18px;
-    letter-spacing: 3px;
-    opacity: 0;
+    background: linear-gradient(rgb(252, 84, 25, .8), rgb(253, 170, 9, .8));
 }
-.portfolio .galeria .proyecto .overlay h3{
+.portfolio .galeria .proyecto .overlay h3
+{
+    transition: 1s;
     margin-bottom: 20px;
-    transition: 1s;
 }
-.portfolio .galeria .proyecto .overlay:hover{
+
+.portfolio .galeria .proyecto .overlay:hover
+{
     opacity: 1;
 }
-.portfolio .galeria .proyecto .overlay:hover h3{
+
+.portfolio .galeria .proyecto .overlay:hover h3
+{
     margin-bottom: 0px;
 }
+
+
 /* SECCION CONTACTO */
-.contacto{    
+.contacto
+{    
     color: #fff;
-    padding: 50px 0;
     margin-top: 5%;
-    background-color: #000000d5;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #000000d5, #434343a8);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #000000d5, #2b2b2ba8), url(./../telefono.png); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background-size: cover;
+    padding: 40px 0;
+    background: -webkit-linear-gradient(to right, #000000d5, #434343a8); 
+    background: linear-gradient(to right, #000000d5, #2b2b2ba8), url(./../telefono.png);
+    background-color: #000000d5;
     background-attachment: fixed;
+    background-size: cover;
 }
-.contacto .contenido-seccion{
-    max-width: 1400px;
+
+.contacto .contenido-seccion
+{
     margin: auto;
+    max-width: 1200px;
 }
-.contacto h2{
+
+.contacto h2
+{
+    width: 40%;
+    margin: auto;
+    padding-bottom: 5px;
     font-size: 48px;
-    font-family: fuenteTitulo;
     text-align: center;
-    padding: 20px 0;
+    margin-bottom: 30px;
+    text-shadow: 1px 1px 8px #fd3a09;
+    font-family: fuenteTitulo;
 }
-.contacto .fila{
+
+.contacto .fila
+{
     display: flex;
 }
-.contacto .col{
-    width: 50%;
+
+.contacto .col
+{
+    width: 45%;
     margin: auto;
     padding: 10px;
-    position: relative;
 }
-.contacto .col input, .contacto .col textarea{
-    display: block;
+
+.contacto .col label
+{
+    color: #fff;
+    font-weight: 700;
+    font-family: fuenteParrafo;
+}
+
+.contacto .col i
+{
+    margin-right: 5px;
+}
+
+.contacto .col input, .contacto .col textarea
+{
     width: 100%;
-    padding: 18px;
     border: none;
-    margin-bottom: 20px;
-    background-color: transparent;
+    padding: 10px;
+    color: #fff;
+    outline: none;
+    font-size: 15px;
+    margin-top: 10px;
+    background: none;
+    border-radius: 5px;
+    margin-bottom: 22px;
+    padding-left: 20px;
+    font-family: fuenteParrafo;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-right: 2px solid #fff;
     border-bottom: 2px solid #fff;
-    border-radius: 3px;
-    color: #fff;
-    font-size: 18px;
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
 }
 
-.contacto .col textarea{
-    height: 80px;
+.contacto .col textarea
+{
     width: 100%;
+    height: 80px;
+    padding: 10px;
+    font-size: 15px;
     padding: 0 18px;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 80px;
+    max-height: 120px;
+    padding-left: 20px;
+    font-family: fuenteParrafo;
 }
 
-.contacto button{
-    cursor: pointer;
-    background-color: transparent;
-    border: 2px solid #fff;
-    width: fit-content;
-    display: block;
-    margin: 20px auto;
-    padding: 10px 22px;
-    font-size: 16px;
-    color: #fff;
-    position: relative;
+.contacto button
+{
     z-index: 10;
+    color: #fff;
+    display: block;
+    font-size: 17px;
+    cursor: pointer;
+    font-weight: 600;
+    margin: 20px auto;
+    width: fit-content;
+    position: relative;
+    padding: 10px 22px;
+    border: 2px solid #fff;
+    font-family: fuenteParrafo;
+    background-color: transparent;
 }
-.contacto button .overlay{
-    position: absolute;
+
+.contacto button .overlay
+{
     top: 0;
     left: 0;
     width: 0;
-    height: 100%;
-    background-color: #FDAA09;
     z-index: -1;
+    height: 100%;
     transition: 1s;
-}
-.contacto button:hover .overlay{
-    width: 100%;
-}
-.contacto .col img{
-    width: 100%;
-}
-.contacto .col .info{
     position: absolute;
+    background-color: #FDAA09;
+}
+
+.contacto button:hover .overlay
+{
+    width: 100%;
+}
+
+.contacto .col img
+{
+    width: 100%;
+}
+
+.contacto .col .info
+{
     top: 40%;
-    background-color: #252A2E;
+    left: 50%;
     padding: 20px;
     max-width: 350px;
-    left: 50%;
+    position: absolute;
+    background-color: #252A2E;
     transform: translate(-50%, -50%);
 }
-.contacto .col .info ul{
+
+.contacto .col .info ul
+{
     list-style: none;
 }
-.contacto .col .info ul li{
+
+.contacto .col .info ul li
+{
     margin-bottom: 20px;
 }
-.contacto .col .info ul li i{
+
+.contacto .col .info ul li i
+{
     color: #FDAA09;
-    display: inline-block;
     margin-right: 20px;
+    display: inline-block;
 }
 
-footer{
-    background-color: #161717;
+
+/* Seccion Footer */
+footer
+{
+    width: 100%;
+    height: 180px;
     color: #fff;
-    padding: 50px 0 30px 0;
+    margin-top: 5%;
     text-align: center;
     position: relative;
-    width: 100%;
-    height: 150px;
+    padding: 50px 0 30px 0;
+    background-color: #161717;
 }
 
-footer .redes{
-    margin-bottom: 25px;
+footer .redes
+{
+    margin: 15px;
+    margin-bottom: 27px;
 }
 
-footer .redes a{
+footer .redes a
+{
+    width: 46px;
+    height: 46px;
     color: #fff;
+    font-size: 30px;
+    transition: .3s;
+    line-height: 48px;
+    margin-right: 10px;
+    border-radius: 100%;
     display: inline-block;
     text-decoration: none;
     border: 1px solid #fff;
-    border-radius: 100%;
-    width: 42px;
-    height: 42px;
-    line-height: 42px;
-    font-size: 25px;
-    transition: .3s;
 }
 
 footer .copyright
 {
-    font-family: fuenteParrafo;
     font-size: 18px;
+    padding-bottom: 23px;
+    font-family: fuenteParrafo;
 }
 
-footer .arriba{
-    display: block;
+footer .arriba
+{
+    left: 50%;
+    top: -25px;
     width: 50px;
     height: 50px;
-    background-color: #FDAA09;
     color: #fff;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    top: -25px;
-    border-radius: 50%;
-    line-height: 50px;
+    display: block;
     font-size: 25px;
+    line-height: 50px;
+    border-radius: 50%;
+    position: absolute;
+    background-color: #FDAA09;
+    transform: translateX(-50%);
 }
 
 
