--- a/public/icon/style.css
+++ b/public/icon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?uxesri');
-  src:  url('fonts/icomoon.eot?uxesri#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?uxesri') format('truetype'),
-    url('fonts/icomoon.woff?uxesri') format('woff'),
-    url('fonts/icomoon.svg?uxesri#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?bfftqh');
+  src:  url('fonts/icomoon.eot?bfftqh#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?bfftqh') format('truetype'),
+    url('fonts/icomoon.woff?bfftqh') format('woff'),
+    url('fonts/icomoon.svg?bfftqh#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -31,6 +31,12 @@
 .icon-aircraft:before {
   content: "\e901";
 }
+.icon-message:before {
+  content: "\e90b";
+}
+.icon-paper-plane:before {
+  content: "\e910";
+}
 .icon-menu:before {
   content: "\e90c";
 }
@@ -42,6 +48,9 @@
 }
 .icon-phone:before {
   content: "\e900";
+}
+.icon-phone2:before {
+  content: "\e916";
 }
 .icon-camera:before {
   content: "\e904";
@@ -58,6 +67,9 @@
 .icon-bookmark:before {
   content: "\e909";
 }
+.icon-user:before {
+  content: "\e914";
+}
 .icon-suitcase1:before {
   content: "\e906";
 }
@@ -70,11 +82,8 @@
 .icon-home:before {
   content: "\e902";
 }
-.icon-images:before {
-  content: "\e910";
-}
-.icon-airplane:before {
-  content: "\e9af";
+.icon-bullhorn:before {
+  content: "\e91a";
 }
 .icon-facebook:before {
   content: "\ea90";
@@ -85,8 +94,8 @@
 .icon-whatsapp:before {
   content: "\ea93";
 }
-.icon-cassette:before {
-  content: "\e90b";
+.icon-github:before {
+  content: "\eab0";
 }
 .icon-graduado:before {
   content: "\e905";
@@ -96,7 +105,4 @@
 }
 .icon-bike:before {
   content: "\e911";
-}
-.icon-paperplane:before {
-  content: "\e914";
 }
